<resources>
    <string name="app_name">My Application</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>

    <string name="popular">Popular</string>
    <string name="preview">Preview</string>
    <string name="about">"Projet étudiant ayant pour object de créer une application utilisant l'api du site themoviedb \n
    Le projet est réalisé en kotlin
    \n
    L'utilisateur peut parcourir les propositions quotidiennes de l'api en fonction d'une catégorie ou parcourir les films les plus populaires \n
    Il peut égalment regarder les détails d'un film"</string>


</resources>