<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_Preview" />
    </fragment>
    <fragment
        android:id="@+id/navigation_Preview"
        android:name="com.gmail.eamosse.imdb.ui.home.PreviewFragment"
        android:label="@string/preview"
        tools:layout="@layout/fragment_preview"
        >
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />


        <argument
            android:name="myArg"
            app:argType="string" />
        <action
            android:id="@+id/action_HomeSecondFragment_to_MovieAboutFragment"
            app:destination="@id/navigation_movie_about" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_second_popular"
        android:name="com.gmail.eamosse.imdb.ui.home.PopularFragment"
        android:label="@string/popular"
        tools:layout="@layout/fragment_popular"
        >
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />

        <action
            android:id="@+id/action_HomeSecondFragment_to_MovieAboutFragment"
            app:destination="@id/navigation_movie_about" />
    </fragment>



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gmail.eamosse.imdb.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">

    <action
        android:id="@+id/action_dashboard_to_PopularList"
        app:destination="@id/navigation_home_second_popular" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.gmail.eamosse.imdb.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_movie_about"
        android:name="com.gmail.eamosse.imdb.ui.home.MovieAboutFragment"
        android:label="Movie"
        tools:layout="@layout/fragment_movie_about">
        <argument
            android:name="movieId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movie_more_details"
        android:name="com.gmail.eamosse.imdb.ui.home.MovieMoreDetailsFragment"
        android:label="MovieDetails"
        tools:layout="@layout/fragment_movie_more_details">
        <argument
            android:name="movieId"
            app:argType="string" />
    </fragment>

</navigation>